--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bobaboard/ao3.js",
   "version": "0.5.1",
   "description": "A NodeJS API for scraping AO3 data",
-  "type": "commonjs",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
