--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bobaboard/ao3.js",
+  "name": "@amazing-sun/ao3js",
   "version": "0.5.1",
   "description": "A NodeJS API for scraping AO3 data",
   "type": "module",
